# test_repo

./: LICENSE  README.md  _config.yml  index.md  ruff.toml
.github/depth_first_traversal/: depth_first_traversal.py
.github/workflows/: ci.yml  test.yml
src/: curry.py  euclid.py  exchange_coins.py  sorting.py
src/binary_representation/: CMakeLists.txt  binary.c  binary.h  main.c  tests.c
src/c-cw2/task1/: CMakeLists.txt  task1-2.c
src/c-cw2/task2/: CMakeLists.txt  task2.c
src/control_work/max_sum/: arr  max_sum.c
src/control_work/palindrome/: palin.c
src/couting_sicarii/: c_list.c  c_list.h  cyclic_list.c  task2
src/cw-2-python/: priority_queue.py
src/double/: CMakeLists.txt  double.c  double_utils.c  double_utils.h  tests.c
src/huffman_code/: huffman.py
src/optimal_sorting_c/: README.md  quick_sort.c  sorting.c  sorting.h  sorting.s
src/rewriting_cw-c/merging_lists/: task3.c
src/rewriting_cw-c/sum_of_digits/: task2.c
src/rewriting_cw-c/without_pair/: CMakeLists.txt  task1.c
src/sorted_list/: s_list.c  s_list.h  sorted_list.c  task1
src/sorted_rist_tests/: CMakeLists.txt  sorted_list.c  tests.c  tests.h
src/stack/: CMakeLists.txt  Dijkstra.c  advanced_brackets.c  stack.c  stack.h
src/unit_testing/: heapsort.py  unit_heapsort.py
src/Введение_в_git/: euclid.py
src/расстановка_ферзей/: complexity.md  queens_permutations.py  queens_recursion.py  simple_queens.py
